proof of saf/theft and iff continuous credential

--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -11,6 +11,7 @@
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{proposition}{Proposition}
 
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}
@@ -411,7 +412,7 @@ b. A mechanism comprised of 2 continuously distributed credentials
 
 We derived the optimal operating point for both \textbf{AND} and \textbf{OR} wallets by maximizing the respective success probabilities with respect to the thresholds of each credential.
 \subsection{1 Discrete and 1 Continuous Credential}
-We started by analyzing the case of an \textbf{AND} wallet comprised of 1 discrete credential and 1 continuous credential. Denote $s_i$ the state of credential $i\in(Discrete,Continuous)$, we defined the discrete credential with a constant value of each one of the probabilities' states as: $ P^1_{safe}, P^1_{loss}, P^1_{leak}, P^1_{theft} $ corrsponding respectively to each one of the states: ${\text{safe}}$, ${\text{loss}}$, ${\text{leak}}$ and ${\text{theft}}$. The continuous credential is defined by its PDFs for the user and the attacker, $P_U$ and $P_A$ respectively. We firstly analyzed the uniformly distributed credential between the bounds of $u_1$,$u_2$ corrsponding to the user distribution and $a_1$,$a_2$ corresponds to the attacker, similarly to Section 3.2.1. We derived the probability of the continuous credentail as follows:
+We started by analyzing the case of an \textbf{AND} wallet comprised of 1 discrete credential and 1 continuous credential. Denote $s_i$ the state of credential $i\in(Discrete,Continuous)$, we defined the discrete credential with a constant value of each one of the probabilities' states as: $ P^1_{safe}, P^1_{loss}, P^1_{leak}, P^1_{theft} $ corrsponding respectively to each one of the states: ${\text{safe}}$, ${\text{loss}}$, ${\text{leak}}$ and ${\text{theft}}$. The continuous credential is defined by its PDFs for the user and the attacker, $P_U$ and $P_A$ respectively. We firstly analyzed the uniformly distributed credential between the bounds of $u_1$,$u_2$ corrsponding to the user distribution and $a_1$,$a_2$ corresponds to the attacker, similarly to Section 3.2.1. We derived the probability of the continuous credential as follows:
 
 \[
 \begin{aligned}
@@ -446,6 +447,35 @@ P^{1}_{\text{safe}},
 0, 
 & T > u_2
 \end{cases}
+}\xspace}
+
+\newcommand{\contprobabilities}{
+\begin{align*}
+P^{2}_{\text{safe}}(T) &= 1 - \mathrm{FAR}(T) - \mathrm{FRR}(T) + \mathrm{FAR}(T)\mathrm{FRR}(T),\\
+P^{2}_{\text{loss}}(T) &= \mathrm{FRR}(T)\bigl(1 - \mathrm{FAR}(T)\bigr),\\
+P^{2}_{\text{leak}}(T) &= \mathrm{FAR}(T)\bigl(1 - \mathrm{FRR}(T)\bigr),\\
+P^{2}_{\text{theft}}(T) &= \mathrm{FAR}(T)\mathrm{FRR}(T).
+\end{align*}
+}
+\newcommand{\ANDintegration}{\ensuremath{
+P^{\text{AND}}_{\text{success}}(T)
+=
+\bigl(1-\mathrm{FRR}(T)\bigr)
+\Bigl(
+P^{1}_{\text{safe}}
++
+P^{1}_{\text{leak}}\bigl(1-\mathrm{FAR}(T)\bigr)
+\Bigr).
+}\xspace}
+\newcommand{\ORintegration}{\ensuremath{
+    P^{\text{OR}}_{\text{success}}(T)
+=
+\bigl(1-\mathrm{FAR}(T)\bigr)
+\Bigl(
+P^{1}_{\text{safe}}
++
+P^{1}_{\text{loss}}\bigl(1-\mathrm{FRR}(T)\bigr)
+\Bigr).
 }\xspace}
 
 \Psuccess
@@ -565,38 +595,126 @@ For both wallet types, we observed that the optimal operating point $T_{\text{op
 \[T_{\text{EER}} = \frac{a_1 u_1 - a_2 u_2}{a_1 - a_2 + u_1 - u_2}
 \]
 
+\subsection{2 Continuous Credentials}
+%%%
+%%%
+\section{Characterizing Security Improvement}
+We will now characterize the conditions under which integrating a continuous credential into a wallet composed of a single discrete credential can enhance its security. First, we show that for any wallet whose discrete credential characterized by non-zero probabilities $P_\text{safe} \text{ and } P_\text{theft}$ only, such integration cannot improve security $(\S\ref{sec:5.1})$. Next, we present a necessary and sufficient condition establishing that, for any wallet composed of a discrete credential with non zero probabilities $P_\text{safe}, P_\text{leak} \text{ or } P_\text{loss}$, integrating a continuous credential improves security for both finite and infinite $(\S\ref{sec:5.2})$ distributions. Finally, we provide a sufficient condition under which an infinite continuous distribution enhances the security of a wallet based on a single discrete credential with non zero probabilities $P_\text{safe}, P_\text{leak} \text{ or } P_\text{loss}$ $(\S\ref{sec:5.3})$.
+\subsection{No Security Gain in the Safe/Theft Case}\label{sec:5.1}
+\begin{proposition}
+    For any wallet $w$ composed of a single discrete credential with non-zero probabilities $P_\text{safe}$ and $P_\text{theft}$ only, integrating the wallet with a continuous credential does not enhance its security.
+\end{proposition}
+\begin{proof}
+    Consider a wallet $w$ composed of a single discrete credential with non-zero probabilities $P_\text{safe}$ and $P_\text{theft}$ only. In this case, integrating the wallet with a continuous credential lead to success probability described by Equation~\ref{eqn:andsuccess} and Equation~\ref{eqn:orineq}. Since $P_\text{leak} = P_\text{loss} = 0$, the success probability in both wallet cases reduces to:
+    \[P_{\text{success}}(T) = P^1_\text{safe} \cdot P^2_{\text{safe}}(T)\]
+    Since $P^2_{\text{safe}}(T) \le 1$ for every value of $T$, it follows that $P_{\text{success}}(T) \le P^1_\text{safe}$, and thus integrating a continuous credential does not enhance the security of the wallet.
+\end{proof}
+\subsection{Sufficient And Necessary Condition for Integrating Continuous Credentials}\label{sec:5.2}
+First, we will define the notion of \emph{asymptotic separability} of a continuously distributed credential. Then, we will show that its a necessary and sufficient condition for enhancing the security for both finite and infinite distributions.
+\begin{definition}
+A continuously distributed credential with user distribution function $P_u(s)$
+and attacker distribution function $P_a(s)$ is said to be \emph{asymptotically separable} if
+\[
+\inf_{t}
+\min\!\left\{
+\frac{\mathrm{FAR}(t)}{1-\mathrm{FRR}(t)},\,
+\frac{\mathrm{FRR}(t)}{1-\mathrm{FAR}(t)}
+\right\}
+= 0,
+\]
+where $\mathrm{FAR}(t) = \int_{t}^{\infty} P_a(s) ds$ and $\mathrm{FRR}(t) = \int_{-\infty}^{t} P_u(s) ds$.
+\end{definition}
+
+\begin{proposition}
+    For any wallet $w$ composed of a single discrete credential with non-zero probabilities $P_\text{safe}, P_\text{leak} \text{ or } P_\text{loss}$, integrating the wallet with a continuous credential whose user and attacker distributions are asymptotically separable, enhances the security of the wallet.
+\end{proposition}
+
+\begin{proof}
+    The security of a wallet composed of a single discrete credential with non-zero probabilities $P_\text{safe}, P_\text{leak} \text{ or } P_\text{loss}$ is given by $P^1_\text{safe}$. A continuously distributed credential is characterized by 4 probability states as function of $T$: $P^{2}_{\text{safe}}(T), P^{2}_{\text{loss}}(T), P^{2}_{\text{leak}}(T), P^{2}_{\text{theft}}(T)$. We can describe each one of these probabilities as a function of False acceptance rate (FAR) and False rejection rate (FRR) as follows:
+    \contprobabilities
+    The success probability of the integrated wallet comprised of 2 credentials is described by Equation~\ref{eqn:andsuccess} and Equation~\ref{eqn:orsuccess}. Thus, by placing the continuous credential in each configuration we can express the success probability of the integrated wallet as a function of the operating threshold $T$:
+    \begin{equation}
+        \label{eqn:andineq}
+    \ANDintegration
+    \end{equation}
+    \begin{equation}
+        \label{eqn:orineq}
+    \ORintegration
+    \end{equation}
+    We need to show that there exists an operating threshold $T$ such that either 
+    $P^{\text{AND}}_{\text{success}}(T) > P^1_{\text{safe}}$ or $P^{\text{OR}}_{\text{success}}(T) > P^1_{\text{safe}}$.
+
+    By algebraic manipulation of Equation~\ref{eqn:andineq} we can demand $P^{\text{AND}}_{\text{success}}(T) > P^1_{\text{safe}}$ if and only if:
+    \[
+    \frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \frac{P^{1}_{\text{leak}}}{P^{1}_{\text{safe}}+P^{1}_{\text{leak}}\cdot(1-\mathrm{FAR}(T))}
+    \]
+    Since $P^{1}_{\text{leak}}\cdot(1-\mathrm{FAR}(T)) < P^{1}_{\text{leak}}$, a sufficient condition for the above inequality is:
+
+    \begin{equation}
+        \label{eqn:FRRineq}
+    \frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \frac{P^{1}_{\text{leak}}}{P^{1}_{\text{safe}}+P^{1}_{\text{leak}}}
+    \end{equation}
+
+    Similarly, we can deduce that $P^{\text{OR}}_{\text{success}}(T) > P^1_{\text{safe}}$ if and only if:
+    \[\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \frac{P^{1}_{\text{loss}}}{P^{1}_{\text{safe}}+P^{1}_{\text{loss}}\cdot(1-\mathrm{FRR}(T))}\]
+    Since $P^{1}_{\text{loss}}\cdot(1-\mathrm{FRR}(T)) < P^{1}_{\text{loss}}$, a sufficient condition for the above inequality is:
+    \begin{equation}
+        \label{eqn:FARineq}
+        \frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \frac{P^{1}_{\text{loss}}}{P^{1}_{\text{safe}}+P^{1}_{\text{loss}}}
+    \end{equation}
+    By the definition of asymptotic separability, there exists an operating threshold $T$ such that: \[
+    \inf_{t}
+    \min\!\left\{
+    \frac{\mathrm{FAR}(t)}{1-\mathrm{FRR}(t)},\,
+    \frac{\mathrm{FRR}(t)}{1-\mathrm{FAR}(t)}
+    \right\}
+    = 0.
+    \] 
+    Equivalently, $\forall \varepsilon > 0, \exists T$ such that either $\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \varepsilon$ or $\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \varepsilon$. Thus, we can choose $T$ such that $\varepsilon$ satisfies either Equation~\ref{eqn:FRRineq} or Equation~\ref{eqn:FARineq}. More precisely, if \[\inf_{T}\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} = 0,\] 
+    then the \textsc{OR} wallet composition is preferable, whereas if \[\inf_{T}\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} = 0,\] then the \textsc{AND} wallet composition is preferable. Therefore, integrating an asymptotically separable continuous credential enhances the security of the wallet.
+
+\end{proof}
+
+
+\subsection{}\label{sec:5.3}
+
 \begin{definition}
 \label{def:User and Attacker distribution functions}
 A continuously distributed credential with user distribution fucntion $P_u(s)$ and attacker distribution function $P_a(s)$
-is said to be \emph{asymptotically dominated} if:
+is said to be \emph{asymptotically dominated on a set of positive measure} if:
 \[
-\forall c>0 \;\exists T \;\text{s.t.}\; \forall x \ge T:\;
-p_a(x) \le c\,p_u(x)
+\forall c>0\;\exists T\;\text{and } \exists A\subseteq D
+\ \text{with}\ \mu(A)>0
+\ \text{s.t.}:\ 
+p_a(x)\le c\,p_u(x)
+\quad \forall x\in A\cap[T,\infty).
 \]
 \[\quad\text{or}\quad\] 
 \[
-\forall c>0 \;\exists T \;\text{s.t.}\; \forall x \le T:\;
-p_u(x) \le c\,p_a(x).
+\forall c>0\;\exists T\;\text{and } \exists A\subseteq D
+\ \text{with}\ \mu(A)>0
+\ \text{s.t.}:\ 
+p_u(x)\le c\,p_a(x)
+\quad \forall x\in A\cap(-\infty,T].
 \]
 \end{definition}
 
-We will show that \emph{asymptotically dominancy} of user and attacker distribution functions is a sufficient and necessary condition for a continuous credential to improve the security of a wallet composed of discrete credentials.
+We will show that \emph{asymptotically dominancy} of user and attacker distribution functions is a sufficient and necessary condition for enhancing a discrete based wallet's security.
 
 \begin{theorem}
 \label{thm:necessary condition}
-Given a continuously distributed credential which is not asymptotically dominated, then for any wallet $w$ composed of one discrete credential and success function $P^{\text{discrete}}_{\text{success}}$, augmenting the wallet with this continuous credential does not improve its achievable security.
+For any wallet $w$ composed of of a single discrete credential with success function $P^{\text{discrete}}_{\text{success}}$, if augmenting $w$ with a continuous credential improves its achievable security, then that continuous credential must be asymptotically dominated
 \end{theorem}
 \begin{proof}
-We prove this by contradiction. Assume for the sake of contradiction that the credential satisfies the theorem while the asymptotic domination condition does not hold. Therfore, there exists a threshold $T$ such that either:
+Since the integration of continuously distributed credential improves a single discrete credential wallet, then there exists a threshold $T$ such that either:
 \[
 P^{\text{AND}}_{\text{success}}(T)
 =
 \bigl(1-\mathrm{FRR}(T)\bigr)
-\left[
-P^{1}_{\text{safe}}
+\Bigl(P^{1}_{\text{safe}}
 +
 P^{1}_{\text{leak}}\bigl(1-\mathrm{FAR}(T)\bigr)
-\right] > P^{1}_{\text{safe}}
+\Bigr) > P^{1}_{\text{safe}}
 \]
 Or:
 \[
@@ -608,18 +726,13 @@ Thus, we can deduce that either:
 Or:
 \[\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \frac{P^{1}_{\text{loss}}}{P^{1}_{\text{safe}}+P^{1}_{\text{loss}}}
 \]
-These inequalities holds for every values of $P^{1}_{\text{safe}}, P^{1}_{\text{loss}}, P^{1}_{\text{leak}}$ in the range of $(0,1)$. Thus, we can deduce that the following inequalities hold for every right hand constant $c > 0$.
-Since the asymptotic domination condition does not hold, then either $\exists c>0 \;\text{s.t.}\; \forall T \;\exists s \ge T:\;$
-\[p_a(s) > c\,p_u(s)
-\]
-Or $\exists c>0 \;\text{s.t.}\; \forall T \;\exists s \le T:\;$
-\[p_u(s) > c\,p_a(s)
-\]
-Thus, we can deduce that either:
+These inequalities holds for every values of $P^{1}_{\text{safe}}, P^{1}_{\text{loss}}, P^{1}_{\text{leak}}$ in the range of $(0,1)$. Thus, as the following inequalities hold for every right hand constant $c > 0$.
 \[
-\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} = \frac{\int_{-\infty}^{T} p_u(s) ds}{\int_{-\infty}^{T} p_a(s) ds} \ge \frac{1}{c}
+\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} = \frac{\int_{-\infty}^{T} p_u(s) ds}{\int_{-\infty}^{T} p_a(s) ds} < c \cdot \frac{\int_{-\infty}^{T} p_a(s) ds}{\int_{-\infty}^{T} p_a(s) ds}
 \]
-
+Then, we can deduce that $\forall c>0 \;\exists T \;\text{s.t:}\;$
+\[\int_{-\infty}^{T} p_u(s) ds < c \cdot \int_{-\infty}^{T} p_a(s) ds
+\]
 
 
 \end{proof}
@@ -637,58 +750,29 @@ A discrete credential is characterized by fixed probability states $P^{1}_{\text
 P^{1}_{\text{safe}}
 \]
 A continuously distributed credential is characterized by 4 probability states that depend on the operating threshold $T$: $P^{2}_{\text{safe}}(T), P^{2}_{\text{loss}}(T), P^{2}_{\text{leak}}(T), P^{2}_{\text{theft}}(T)$. We can describe each one of these probabilities as a function of False acceptance rate (FAR) and False rejection rate (FRR) as follows:
-\[ \begin{aligned}
-P^{2}_{\text{safe}}(T) &= 1 - \text{FAR}(T) - \text{FRR}(T) + \text{FAR}(T) \cdot \text{FRR}(T),\\
-P^{2}_{\text{loss}}(T) &= \text{FRR}(T)\,\bigl(1 - \text{FAR}(T)\bigr),\\
-P^{2}_{\text{leak}}(T) &= \text{FAR}(T)\,\bigl(1 - \text{FRR}(T)\bigr),\\
-P^{2}_{\text{theft}}(T) &= \text{FAR}(T) \cdot \text{FRR}(T).
-\end{aligned}
-\]
+\contprobabilities
 The success probability of the integrated wallet comprised of 2 credentials is described by Equation~\ref{eqn:andsuccess} and Equation~\ref{eqn:orsuccess}. Thus, we can express the success probability of the integrated wallet as a function of the operating threshold $T$:
-\begin{equation}
-    \label{eqn:andineq}
-P^{\text{AND}}_{\text{success}}(T)
-=
-\bigl(1-\mathrm{FRR}(T)\bigr)
-\left[
-P^{1}_{\text{safe}}
-+
-P^{1}_{\text{leak}}\bigl(1-\mathrm{FAR}(T)\bigr)
-\right].
-\end{equation}
-\begin{equation}
-    \label{eqn:orineq}
-P^{\text{OR}}_{\text{success}}(T)
-=
-\bigl(1-\mathrm{FAR}(T)\bigr)
-\Bigl(
-P^{1}_{\text{safe}}
-+
-P^{1}_{\text{loss}}\bigl(1-\mathrm{FRR}(T)\bigr)
-\Bigr).
-\end{equation}
+\ANDintegration
+\ORintegration
 We need to show that there exists an operating threshold $T$ such that either 
 $P^{\text{AND}}_{\text{success}}(T) > P^1_{\text{safe}}$ or $P^{\text{OR}}_{\text{success}}(T) > P^1_{\text{safe}}$.
 
-We can deduce that $P^{\text{AND}}_{\text{success}}(T) > P^1_{\text{safe}}$ if and only if:
+ By algebraic manipulation of Equation~\ref{eqn:andineq} we can demand $P^{\text{AND}}_{\text{success}}(T) > P^1_{\text{safe}}$ if and only if:
 \[
 \frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \frac{P^{1}_{\text{leak}}}{P^{1}_{\text{safe}}+P^{1}_{\text{leak}}\cdot(1-\mathrm{FAR}(T))}
 \]
 Since $P^{1}_{\text{leak}}\cdot(1-\mathrm{FAR}(T)) < P^{1}_{\text{leak}}$, a sufficient condition for the above inequality is:
 
-\begin{equation}
-    \label{eqn:FRRineq}
-\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \frac{P^{1}_{\text{leak}}}{P^{1}_{\text{safe}}+P^{1}_{\text{leak}}}
-\end{equation}
+\[\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \frac{P^{1}_{\text{leak}}}{P^{1}_{\text{safe}}+P^{1}_{\text{leak}}}\]
+
 
 Similarly, we can deduce that $P^{\text{OR}}_{\text{success}}(T) > P^1_{\text{safe}}$ if and only if:
 \[\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \frac{P^{1}_{\text{loss}}}{P^{1}_{\text{safe}}+P^{1}_{\text{loss}}\cdot(1-\mathrm{FRR}(T))}\]
 Since $P^{1}_{\text{loss}}\cdot(1-\mathrm{FRR}(T)) < P^{1}_{\text{loss}}$, a sufficient condition for the above inequality is:
-\begin{equation}
-    \label{eqn:FARineq}
+\[
     \frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \frac{P^{1}_{\text{loss}}}{P^{1}_{\text{safe}}+P^{1}_{\text{loss}}}
-\end{equation}
-For small values of $T$ in the interval of $(-\infty,T]$, we can look at Equation~\ref{eqn:FRRineq}. 
+\]
+We will expand left hand side of Equation~\ref{eqn:FRRineq}. 
 \[
 \frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} = \frac{\int_{-\infty}^{T} P_u(s) ds}{\int_{-\infty}^{T} P_a(s) ds}
 \]
@@ -705,13 +789,11 @@ By Definition~\ref{def:User and Attacker distribution functions}, since the cont
 \[
 \frac{\int_{T}^{\infty} P_a(s) ds}{\int_{T}^{\infty} P_u(s) ds} \le \frac{\int_{T}^{\infty} c \cdot P_u(s) ds}{\int_{T}^{\infty} P_u(s) ds} = c, \forall c > 0
 \]
-We show that either $\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \varepsilon$ or $\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \varepsilon$ for any $\varepsilon > 0$.
+We showed that $\forall c>0$  either $\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < c$ or $\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < c$. Therefore, integrating a discrete based wallet with an asymptotically dominated continuous credential improves its security.
 \end{proof}
 
-This proof is not trivial, as the integration of another discrete credential to a discrete credentail based wallet, does not always enhance its security. For example, if the wallet is comprised of 1 discrete credential with high safe values and low leak values, adding a discrete credential with low safe values and high leak values would decrease the overall security. Thus, Theorem~\ref{thm:continuous-improves-security} shows that by using a separable continuous credential, we can always improve the security of any discrete credential based wallet.
-\subsection{2 Continuous Credentials}
-%%%
-%%%
+This proof is not trivial, as the integration of another discrete credential to a discrete credential based wallet, does not always enhance its security. For example, if the wallet is comprised of 1 discrete credential with high safe values and low leak values, adding a discrete credential with low safe values and high leak values would decrease the overall security. Thus, Theorem~\ref{thm:continuous-improves-security} shows that by using a separable continuous credential, we can always improve the security of any discrete credential based wallet.
+\subsection{}\label{sec:5.4}
 \section{Conclusion}
 
 \begin{thebibliography}{9}
